Moved laserHandler and created Visitor interface